--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
 <html>
-<h1>D2GG</h1>
+   <head>
+      <title>d2gg</title>
+      <link rel="stylesheet" href="css/style.css"
+   </head>
+   <body>
+      <h4>D2GG</h4>
+      <p>
+      Daire 2: General Gramofon is an improvisation based experimental duo from Istanbul.
+
+      There is no sound in the absence of space, whereas different perceptions of space delivers different forms of sound. 
+      D2GG's improvisation is influenced by this simple idea.
+
+      Since 2000, D2GG has attended several festivals and has been performing in different indoor and outdoor places.
+      </p>
+      <br>
+      @ <a href="http://daire2.bandcamp.com">bandcamp</a> / 
+      <a href="https://soundcloud.com/d2gg">soundcloud</a>
+   </body>
 </html>
