--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <p>
       Daire 2: General Gramofon is an improvisation based experimental duo from Istanbul.
 
-      There is no sound in the absence of space, whereas different perceptions of space delivers different forms of sound. 
+      There is no sound in the absence of space, whereas different perceptions of space deliver different forms of sound. 
       D2GG's improvisation is influenced by this simple idea.
 
       Since 2000, D2GG has attended several festivals and has been performing in different indoor and outdoor places.
