added an image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    </head>
    <body>
       <h4>D2GG</h4>
+      <img src="img/band.png">
       <p>
       Daire 2: General Gramofon is an improvisation based experimental duo from Istanbul.
 
